--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,3 +5,93 @@ font-family: 'IBM Plex Sans', sans-serif;
 
 */
 
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+:root {
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+/*menu hamburgesa*/
+
+.respmenu a { 
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    padding: 10px 30px;
+    border-bottom: 2px solid #456789;
+    max-width: 150px;
+    background: #9fc0e0;
+    text-shadow: 1px 1px black;
+    margin: 0 5px 0 0;
+    
+    
+}
+
+.respmenu input[type="checkbox"], .respmenu .fa-bars, .respmenu .fa-times {
+    position: absolute;  
+    right: 0;
+    top: 0;
+    width: 18px; 
+}
+
+.respmenu .fa-bars, .respmenu .fa-times {
+    font-size: 18px;
+    pointer-events: none;
+}
+
+.respmenu input[type="checkbox"] {
+    opacity: 0; 
+}
+
+.respmenu {
+    color: black;
+    position: relative; 
+    min-height: 44px;
+    margin: 0 12px 0 0;
+}
+
+.respmenu nav {
+    display: none;
+    margin: 0 0 0 134px;
+}
+
+.respmenu input:checked ~ nav {
+    display: block;
+}
+
+.respmenu input:checked ~ .fa-bars {
+    display: none;
+}
+
+.respmenu input:not(:checked) ~ .fa-times {
+    display: none;
+}
+
+li {
+    list-style: none;
+}
+/*FIN MENU HAMBURGESA*/
+
+
+.title-podcast {
+    font-size: 36px;
+    color: #060A24;
+    letter-spacing: 0;
+    line-height: 42px;
+    margin: 0 0 10px 10px;
+}
+
+.description-podcast {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 14px;
+    color: #060A24;
+    letter-spacing: 0;
+    line-height: 22px;
+    margin: 0 10px 0 10px;
+
+}
+
